kube/media/media.ingress.yml
## media.ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: "media"
  name: "media-ingress"
spec:
  ingressClassName: "nginx"
  rules:
  - host: "media.192.168.0.200.nip.io"
    http:
      paths:
        - backend:
            service:
              name: "transmission-transmission-openvpn"
              port: 
                number: 80
          path: "/transmission"
          pathType: Prefix
        - backend:
            service:
              name: "sonarr"
              port: 
                number: 80
          path: "/sonarr"
          pathType: Prefix
        - backend:
            service:
              name: "jackett"
              port: 
                number: 80
          path: "/jackett"
          pathType: Prefix
        - backend:
            service:
              name: "radarr"
              port: 
                number: 80
          path: "/radarr"
          pathType: Prefix
        - backend:
            service:
              name: "readarr"
              port: 
                number: 80
          path: "/readarr"
          pathType: Prefix
---
